--- a/FinalProjectFrontend/app.json
+++ b/FinalProjectFrontend/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "FinalProjectFrontend",
+    "name": "Mimik",
     "slug": "FinalProjectFrontend",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -19,12 +19,18 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.mkstone.Mems_HG"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "16ac8f59-cebd-4b16-aa5b-44c2c1ec3488"
+      }
     }
   }
 }
