--- a/FinalProjectFrontend/package.json
+++ b/FinalProjectFrontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finalprojectfrontend",
+  "name": "memshg",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -13,12 +13,18 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-av": "^13.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.29.0",
+    "react-native-sound": "^0.11.2",
     "react-native-web": "^0.19.9",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-system-ui": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
